travis-ci: add libssl-dev / libmnl-dev and libnftnl-dev packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
     - libevent-dev
     - libnfnetlink-dev
     - uuid-dev
+    - libssl-dev
+    - libmnl-dev
+    - libnftnl-dev
 
 # container-based builds
 sudo: false
